# gsl-interpreter

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: labels.json
src/gsl_interpreter/: __init__.py  __main__.py  camera.py  dataset.py  features.py  infer.py  labels.py  landmarks.py  overlay.py  smoothing.py  torch_model.py  tracking_overlay.py  train.py  tts.py
