[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gsl-interpreter"
version = "0.1.0"
description = "Georgian Sign Language webcam-to-text prototype"
requires-python = ">=3.10,<3.12"
dependencies = [
  "mediapipe==0.10.14",
  "opencv-python==4.13.0.92",
  "numpy==2.4.6",
  "scikit-learn==1.9.0",
  "joblib==1.5.3",
  "torch==2.11.0",
  "edge-tts==7.2.8",
]

[tool.setuptools.packages.find]
where = ["src"]
